Working on getting DNS and gitpages to be friendly

--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@ layout: default
 ---
 
 <div class="business-card">
-    <h1>Max J Spaulding</h1>
-    <h2>Architect and Engineering Lead</h2>
-
-    <div class="contact-icons">
-        <!-- Replace # with your actual links -->
-        <a href="#"><img src="/path/to/email-icon.png" alt="Email"></a>
-        <a href="#"><img src="/path/to/linkedin-icon.png" alt="LinkedIn"></a>
-        <a href="#"><img src="/path/to/github-icon.png" alt="GitHub"></a>
-        <a href="#"><img src="/path/to/phone-icon.png" alt="Phone"></a>
-        <a href="#"><img src="/path/to/resume-icon.png" alt="Resume"></a>
-        <a href="/portfolio"><img src="/path/to/portfolio-icon.png" alt="Portfolio"></a>
+    <div class="business-card-content">
+        <h1>Max J Spaulding</h1>
+        <h2>Architect and Engineering Lead</h2>
     </div>
+    <!-- <div class="contact-icons"> -->
+        <!-- Replace # with your actual links -->
+        <!-- <a href="#"><img src="/path/to/email-icon.png" alt="Email"></a> -->
+        <!-- <a href="#"><img src="/path/to/linkedin-icon.png" alt="LinkedIn"></a> -->
+        <!-- <a href="#"><img src="/path/to/github-icon.png" alt="GitHub"></a> -->
+        <!-- <a href="#"><img src="/path/to/phone-icon.png" alt="Phone"></a> -->
+        <!-- <a href="#"><img src="/path/to/resume-icon.png" alt="Resume"></a> -->
+        <!-- <a href="/portfolio"><img src="/path/to/portfolio-icon.png" alt="Portfolio"></a> -->
+    <!-- </div> -->
 </div>
+
+<!-- <div class="flip-card" display:none !important;>
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="/assets/github_black_and_white.png" alt="Icon">
+    </div>
+    <div class="flip-card-back">
+      <img src="/assets/github_color.png" alt="Icon">
+    </div>
+  </div>
+</div>
+ -->
+
+
+<!-- <a href="https://www.flaticon.com/free-icons/github" title="github icons">Github icons created by Pixel perfect - Flaticon</a> -->
+<!-- <a href="https://www.flaticon.com/free-icons/github" title="github icons">Github icons created by Pixel perfect - Flaticon</a> -->
