Update card face and add flip animation

--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 layout: default
 ---
 
-<div class="business-card">
-    <div class="business-card-content">
-        <h1>Max J Spaulding</h1>
-        <h2>Architect and Engineering Lead</h2>
+<div class="card">
+    <div class="card-face">
+        <div class="content">
+            <h1 class="name">Max Spaulding</h1>
+            <h2 class="title">Architect and Engineering Lead</h2>
+        </div>
     </div>
+    <div class="card-back">
+        <p><span class="property">Email: </span>maxjspaulding@gmail.com</p>
+        <p><span class="property">Twitter: </span>@bitphreak</p>
+        <p><span class="property">Phone: </span>(123) 456-7890</p>
+        <p><span class="property">Website: </span>zachsaucier.com</p>
+      </div>
+</div>
+
+<!--     <div class="side">
+      <h3 class="name">Max Spaulding</h3>
+      <div>Architect and Engineering Lead</div>      
+      <div class="info">
+        <p><span class="property">Email: </span>maxjspaulding@gmail.com</p>
+        <p><span class="property">Twitter: </span>@bitphreak</p>
+        <p><span class="property">Phone: </span>(123) 456-7890</p>
+        <p><span class="property">Website: </span>zachsaucier.com</p>
+      </div>
+    </div>
+ -->
+
+
+
+<!-- <div class="business-card"> -->
+    <!-- <div class="business-card-content"> -->
+        <!-- <h1>Max J Spaulding</h1> -->
+        <!-- <h2>Architect and Engineering Lead</h2> -->
+    <!-- </div> -->
     <!-- <div class="contact-icons"> -->
         <!-- Replace # with your actual links -->
         <!-- <a href="#"><img src="/path/to/email-icon.png" alt="Email"></a> -->
@@ -16,7 +45,7 @@ layout: default
         <!-- <a href="#"><img src="/path/to/resume-icon.png" alt="Resume"></a> -->
         <!-- <a href="/portfolio"><img src="/path/to/portfolio-icon.png" alt="Portfolio"></a> -->
     <!-- </div> -->
-</div>
+<!-- </div> -->
 
 <!-- <div class="flip-card" display:none !important;>
   <div class="flip-card-inner">
