Layout complete, icons change color on hover

--- a/index.html
+++ b/index.html
@@ -5,60 +5,45 @@ layout: default
 <div class="card">
     <div class="card-face">
         <div class="content">
-            <h1 class="name">Max Spaulding</h1>
-            <h2 class="title">Architect and Engineering Lead</h2>
-        </div>
+            <div class="content-top">
+                <div class="name">Max Spaulding</div>
+            </div>
+            <div class="content-bottom">
+                <div class="content-bottom-top">
+                    <div class="divider"></div>
+                    <div class="title">Architect and Engineering Lead</div>
+                </div>
+                <div class="content-bottom-bottom">
+                    <div class="icon_row">
+                        <div class="icon">
+                            <a href="mailto:maxjspaulding@gmail.com">
+                            {% include svgs/envelope_email_icon.svg %}
+                            </a>
+                        </div>
+                        <div class="icon">
+                            <a href="https:www.linkedin.com/in/maxjspaulding">
+                            {% include svgs/linkedin_icon.svg %}
+                            </a>
+                        </div>
+                        <div class="icon">
+                            <!-- <a href=""> -->
+                            {% include svgs/id_card_icon.svg %}
+                            <!-- </a> -->
+                        </div>
+                        <div class="icon">
+                            <!-- <a href=""> -->
+                            {% include svgs/github_icon.svg %}
+                            <!-- </a> -->
+                        </div>                
+                        <div class="icon">
+                            <!-- <a href=""> -->
+                            {% include svgs/pen_icon.svg %}
+                            <!-- </a> -->
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="title last-title">San Francisco, Ca</div>
+                </div>
+            </div>
     </div>
-    <div class="card-back">
-        <p><span class="property">Email: </span>maxjspaulding@gmail.com</p>
-        <p><span class="property">Twitter: </span>@bitphreak</p>
-        <p><span class="property">Phone: </span>(123) 456-7890</p>
-        <p><span class="property">Website: </span>zachsaucier.com</p>
-      </div>
 </div>
-
-<!--     <div class="side">
-      <h3 class="name">Max Spaulding</h3>
-      <div>Architect and Engineering Lead</div>      
-      <div class="info">
-        <p><span class="property">Email: </span>maxjspaulding@gmail.com</p>
-        <p><span class="property">Twitter: </span>@bitphreak</p>
-        <p><span class="property">Phone: </span>(123) 456-7890</p>
-        <p><span class="property">Website: </span>zachsaucier.com</p>
-      </div>
-    </div>
- -->
-
-
-
-<!-- <div class="business-card"> -->
-    <!-- <div class="business-card-content"> -->
-        <!-- <h1>Max J Spaulding</h1> -->
-        <!-- <h2>Architect and Engineering Lead</h2> -->
-    <!-- </div> -->
-    <!-- <div class="contact-icons"> -->
-        <!-- Replace # with your actual links -->
-        <!-- <a href="#"><img src="/path/to/email-icon.png" alt="Email"></a> -->
-        <!-- <a href="#"><img src="/path/to/linkedin-icon.png" alt="LinkedIn"></a> -->
-        <!-- <a href="#"><img src="/path/to/github-icon.png" alt="GitHub"></a> -->
-        <!-- <a href="#"><img src="/path/to/phone-icon.png" alt="Phone"></a> -->
-        <!-- <a href="#"><img src="/path/to/resume-icon.png" alt="Resume"></a> -->
-        <!-- <a href="/portfolio"><img src="/path/to/portfolio-icon.png" alt="Portfolio"></a> -->
-    <!-- </div> -->
-<!-- </div> -->
-
-<!-- <div class="flip-card" display:none !important;>
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-      <img src="/assets/github_black_and_white.png" alt="Icon">
-    </div>
-    <div class="flip-card-back">
-      <img src="/assets/github_color.png" alt="Icon">
-    </div>
-  </div>
-</div>
- -->
-
-
-<!-- <a href="https://www.flaticon.com/free-icons/github" title="github icons">Github icons created by Pixel perfect - Flaticon</a> -->
-<!-- <a href="https://www.flaticon.com/free-icons/github" title="github icons">Github icons created by Pixel perfect - Flaticon</a> -->
